<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="1dp"
    tools:context="sys_jm.app.tiendaonline.Acercade"
    android:background="@color/Blanco">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_below="@+id/tool_bar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/ic_logov4"
            android:id="@+id/imageView"
            style="@style/ImagenLogo" />

        <TextView
            android:text="@string/VersionName"
            android:id="@+id/VersionName"
            style="@style/Acercade_Titulo" />

        <View style="@style/Separator" />

        <TextView android:text="@string/versionapp"
            style="@style/VersionApp"/>

        <TextView
            android:text="@string/TituloInformacion"
            android:id="@+id/textView2"
            style="@style/Acercade_Titulo" />

        <View style="@style/Separator" />

        <TextView
            android:text="@string/Informacion"
            android:id="@+id/Informacion"
            style="@style/Informacion"
            android:autoLink="email" />


        <TextView
            android:text="@string/DesarrolladoName"
            android:id="@+id/DesarrolladoName"
            style="@style/Acercade_Titulo" />

        <View style="@style/Separator" />

        <TextView
            android:text="@string/Desarrollado"
            android:id="@+id/Desarrollado"
            style="@style/Informacion" />


    </LinearLayout>
</RelativeLayout>
