<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ve.com.seguridadsistema.clubamerica.Sugerencia"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/Blanco"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugerencia_name"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/text_carnet"
            android:layout_gravity="center_horizontal"
            android:hint="Indique su numero de carnet"
            android:textColorHint="#4c0f0f0f" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugerencia_nombre"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_nombre"
            android:hint="Indique su nombre completo"
            android:textColorHint="#4c0f0f0f"
            android:capitalize="words" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugerencia_obser"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_obser"
            android:hint="Indique las observaciones"
            android:inputType="textMultiLine|textCapSentences"
            android:textColorHint="#4c0f0f0f" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enviar"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/Blanco"
            android:layout_marginTop="25dp"
            android:shadowDx="1"
            android:shadowDy="1.5"
            android:shadowRadius="10"
            android:shadowColor="#4c0f0f0f"
            android:singleLine="false"
            android:gravity="center" />


    </LinearLayout>
</RelativeLayout>
