<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ve.com.seguridadsistema.clubamerica.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:padding="0dp"
            android:elevation="5dp"/>

        <ImageView
            android:src="@drawable/ic_logov4"
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="115dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consulta_deuda"
            android:id="@+id/textconsultadeuda"
            android:layout_gravity="center_horizontal"
            style="@style/titulo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:shadowColor="#4c0f0f0f"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center_horizontal">

            <android.support.v7.widget.SearchView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchView"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="true"
                android:queryHint="@string/nrocarnet"
                android:textAlignment="center"
                android:inputType="phone"
                app:iconifiedByDefault="false"
                android:focusable="false"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/piedepagina"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal|bottom" />
    </LinearLayout>
</RelativeLayout>
