<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ve.com.seguridadsistema.clubamerica.ConsultaActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">


        <TextView
            style="@style/titulo2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="DATOS DEL SOCIO"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp">

            <TextView
                android:text="@string/nrocarnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNroCarnet"
                android:layout_weight="1"
                android:paddingRight="12dp"
                android:textColor="@color/colorPrimary"
                style="@style/titulo2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textNroCarnet2"
                android:layout_weight="1"
                android:textSize="16dp"
                android:paddingRight="15dp" />

            <TextView
                style="@style/titulo2"
                android:text="@string/cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:paddingRight="12dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textcedula"
                android:layout_weight="1"
                android:textSize="16dp" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textNombreSocio"
            android:textSize="22dp"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_DetalleDeuda"
            android:id="@+id/textDetalleDeuda"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            style="@style/titulo2"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary" />

        <ListView
            android:id="@+id/listView"
            style="@style/DetalleDeuda" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_estatus"
            android:shadowDx="1"
            android:shadowDy="1.5"
            android:shadowRadius="1"
            android:clickable="false"
            style="@style/estatus"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp" />

    </LinearLayout>

</RelativeLayout>
